--- a/_posts/0000-01-02-pcrooker.md
+++ b/_posts/0000-01-02-pcrooker.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "This is the second slide"
 ---
-This is my theory, it is mine.
+This is my theory, it is mine. It is no one else's theory.
 Use the left arrow to go back
